WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117066
[sh4] Fix floating point comparisons in baseline JIT
https://bugs.webkit.org/show_bug.cgi?id=117066
Summary
[sh4] Fix floating point comparisons in baseline JIT
Julien Brianceau
Reported
2013-05-31 02:32:01 PDT
Current implementation of branchDouble function in baseline JIT is wrong for some conditions (1) and overkill for others (2). (1) With DoubleGreaterThanOrEqual condition for instance, branch will be taken if either operand is NaN with current implementation whereras it should not. (2) With DoubleNotEqualOrUnordered condition for instance, performed NaN checks are useless (because comparison result is false if either operand is NaN).
Attachments
Fix floating point comparisons in sh4 baseline JIT
(10.86 KB, patch)
2013-05-31 02:51 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-05-31 02:51:30 PDT
Created
attachment 203428
[details]
Fix floating point comparisons in sh4 baseline JIT
WebKit Commit Bot
Comment 2
2013-05-31 11:21:58 PDT
Comment on
attachment 203428
[details]
Fix floating point comparisons in sh4 baseline JIT Clearing flags on attachment: 203428 Committed
r151032
: <
http://trac.webkit.org/changeset/151032
>
WebKit Commit Bot
Comment 3
2013-05-31 11:22:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug