[sh4] Fix floating point comparisons in baseline JIT. https://bugs.webkit.org/show_bug.cgi?id=117066.

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-05-31
Reviewed by Oliver Hunt.

Current implementation of branchDouble function in baseline JIT is wrong
for some conditions and overkill for others. For instance:
- With DoubleGreaterThanOrEqual condition, branch will be taken if either
  operand is NaN with current implementation whereras it should not.
- With DoubleNotEqualOrUnordered condition, performed NaN checks are
  useless (because comparison result is false if either operand is NaN).

* assembler/MacroAssemblerSH4.h:
(JSC::MacroAssemblerSH4::branchDouble):

Canonical link: https://commits.webkit.org/135348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151032 268f45cc-cd09-0410-ab3c-d52691b4dbfc